<resources>
    <string name="app_name">HotelApp</string>
    <string name="binding_is_not_init">Binding is not init!</string>
    <string name="get_hotel_error_message">Failed to get information about the hotel!</string>
    <string name="carousel_image_view_content_desc">Hotel image</string>
    <string name="about_hotel_title">Oб отеле</string>
    <string name="conveniences_text_view">Удобства</string>
    <string name="everything_you_need_text_view">Все самое необходимое</string>
    <string name="inclusive_button_text_view">Что включено</string>
    <string name="non_inclusive_button_text_view">Что не включено</string>
    <string name="choose_apartment_button_text">К выбору номера</string>
    <string name="currency_rub_text_view">₽</string>
    <string name="select_room_button_text">Выбрать номер</string>
    <string name="details_room_text">Подробнее о номере</string>
    <string name="get_rooms_error_message">Failed to get an information about rooms!</string>
    <string name="hotel_fragment_label">Отель</string>
    <string name="booking_fragmemt_label">Бронирование</string>
    <string name="departure_from_text">Вылет из</string>
    <string name="arrival_country_text">Страна, город</string>
    <string name="dates_text">Даты</string>
    <string name="nights_text">Кол-во ночей</string>
    <string name="night_text">ночей</string>
    <string name="number_text">Номер</string>
    <string name="nutrition_text">Питание</string>
    <string name="information_about_consumer">Информация о покупателе</string>
    <string name="pay_information_text">Эти данные никому не передаются. После оплаты мы вышлем чек на указанный вами номер и почту</string>
    <string name="phone_number_text">Номер телефона</string>
    <string name="email_text">Почта</string>
    <string name="first_tourist">Первый турист</string>
    <string name="hint_name_text">Имя</string>
    <string name="hint_surname_text">Фамилия</string>
    <string name="hint_date_text">Дата рождения</string>
    <string name="hint_citizenship_text">Гражданство</string>
    <string name="hint_passport_text">Номер загранпаспорта</string>
    <string name="hint_date_passport_text">Срок действия загранпаспорта</string>
    <string name="add_tourist_text">Добавить туриста</string>
    <string name="nth_tourist_text">-й турист</string>
    <string name="get_booking_error_message">Failed to get an information about booking!</string>
    <string name="pay_text">Оплатить</string>
    <string name="enter_correct_data">Заполните поле корректно!</string>
    <string name="payed_successfully">Заказ оплачен</string>
    <string name="order_accepted_text">Ваш заказ принят в работу</string>
    <string name="order_confirmation_text">Подтверждение заказа № \nможет занять некоторое время (от 1 часа до суток). \nКак только мы получим ответ от туроператора, \nвам на почту придет уведомление.</string>
    <string name="super_button_text">Супер!</string>
    <string name="from_text">от</string>
</resources>