<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.Material3.CardView.Filled"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    android:layout_marginTop="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/carousel_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/carousel_item_height"
            android:clipChildren="false"
            android:clipToPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carousel_recycler_view"
            tools:text="Стандартный номер с видом на бассейн" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/peculiarities_chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_text_view" />

        <com.google.android.material.chip.Chip
            android:id="@+id/details_chip"
            style="@style/Widget.Material3.Chip.Input.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checkable="false"
            android:textColor="@color/blue_main"
            app:chipBackgroundColor="@color/blue_secondary"
            app:closeIcon="@drawable/ic_arrow_forward"
            app:closeIconTint="@color/blue_main"
            app:cornerRadius="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/peculiarities_chip_group"
            android:text="@string/details_room_text" />

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_chip"
            tools:text="134268" />

        <TextView
            android:id="@+id/currency_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/currency_rub_text_view"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/price_text_view"
            app:layout_constraintStart_toEndOf="@+id/price_text_view"
            app:layout_constraintTop_toTopOf="@+id/price_text_view" />

        <TextView
            android:id="@+id/price_per_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="@+id/price_text_view"
            android:layout_marginStart="8dp"
            android:textColor="@color/gray_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/currency_text_view"
            app:layout_constraintStart_toEndOf="@+id/currency_text_view"
            tools:text="За 7 ночей с перелетом" />

        <Button
            android:id="@+id/select_room_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/select_room_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>