<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_hotel_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/hotel_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/choose_apartment_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_edit_text"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/carousel_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/carousel_item_height"
                        android:clipChildren="false"
                        android:clipToPadding="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/rating_chip"
                        style="@style/Widget.Material3.Chip.Assist.Elevated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:checkable="false"
                        android:clickable="false"
                        android:textColor="@color/dark_yellow_chip"
                        app:chipBackgroundColor="@color/yellow_chip"
                        app:chipIcon="@drawable/baseline_star_24"
                        app:chipIconTint="@color/dark_yellow_chip"
                        app:cornerRadius="5dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/carousel_recycler_view"
                        tools:text="5 Превосходно" />

                    <TextView
                        android:id="@+id/name_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rating_chip"
                        tools:text="Лучший пятизвездочный отель в Хургаде, Египет" />

                    <TextView
                        android:id="@+id/address_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/blue_main"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/name_text_view"
                        tools:text="Madinat Makadi, Safaga Road, Makadi Bay, Египет" />

                    <TextView
                        android:id="@+id/from_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/from_text"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/address_text_view" />

                    <TextView
                        android:id="@+id/price_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/from_text_view"
                        app:layout_constraintStart_toEndOf="@+id/from_text_view"
                        app:layout_constraintTop_toTopOf="@+id/from_text_view"
                        tools:text="134268" />

                    <TextView
                        android:id="@+id/currency_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/currency_rub_text_view"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/price_text_view" />

                    <TextView
                        android:id="@+id/price_for_it_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="@+id/price_text_view"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/gray_text"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/currency_text_view"
                        tools:text="За тур с перелетом" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/about_hotel_title_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_hotel_title"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/peculiarities_chip_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp" />

                    <TextView
                        android:id="@+id/desc_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:alpha=".9"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:text="Отель VIP-класса с собственными гольф полями. Высокий уровнь сервиса. Рекомендуем для респектабельного отдыха. Отель принимает гостей от 18 лет!" />

                    <com.google.android.material.card.MaterialCardView
                        style="@style/Widget.Material3.CardView.Filled"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:cardBackgroundColor="@color/light_gray_card">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:orientation="vertical">

                            <include
                                android:id="@+id/conveniences_button"
                                layout="@layout/button_conveniences" />

                            <include
                                android:id="@+id/inclusive_button"
                                layout="@layout/button_inclusive" />

                            <include
                                android:id="@+id/non_inclusive_button"
                                layout="@layout/button_non_inclusive" />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/choose_apartment_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/choose_apartment_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/hotel_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="hotel_scroll_view, choose_apartment_button"
        tools:visibility="visible" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/hotel_progress_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:showAnimationBehavior="none" />

</androidx.constraintlayout.widget.ConstraintLayout>